# pyaidocs

./: CHANGELOG.md  CONTRIBUTING.md  README.md  dev.py  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pyaidocs/: __init__.py  options.py  pyaidocs.py  pyaipdfs.py
tests/: test_pyaidocs.py
